# 3DFileConverter

./: CMakeLists.txt  LICENSE  README.md
include/: Core.h  FileConverter.h  ReadObj.h  Reader.h  Utils.h  WriteStl.h  Writer.h
res/: cube.stl
src/: FileConverter.cpp  ReadObj.cpp  WriteStl.cpp  main.cpp
test/: CMakeLists.txt  UnitTest.cpp
